--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "commitizen": "^4.2.4",
     "install": "^0.13.0",
     "npm": "^8.4.1",
     "react": "^17.0.2",
@@ -34,7 +35,8 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "commit": "git add . & cz"
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +58,13 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "cz-conventional-changelog": "^3.3.0",
     "gts": "^3.1.0",
     "typescript": "^4.0.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
