--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "commitizen": "^4.2.4",
+    "husky": "^7.0.4",
     "install": "^0.13.0",
+    "lint-staged": "^12.3.3",
     "npm": "^8.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -33,10 +35,12 @@
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
-    "prepare": "npm run compile",
+    "prepare": "npm run compile && husky install",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
-    "commit": "git add . & cz"
+    "commit": "git add . && cz",
+    "test-changed": "react-scripts test --watchAll=false --onlyChanged",
+    "pre-commit": "lint-staged && npm run test-changed"
   },
   "eslintConfig": {
     "extends": [
@@ -60,11 +64,17 @@
     "@types/node": "^14.11.2",
     "cz-conventional-changelog": "^3.3.0",
     "gts": "^3.1.0",
+    "husky": "^7.0.0",
     "typescript": "^4.0.3"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --max-warnings 0"
+    ]
   }
 }
